# wormhole

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  dump_epic_issues.py  epic_issues.json  tasks.md
.config/: nextest.toml
.task/: batch-for-each.md  cursor-plan.md  data-model.plan  notify-agent-on-comment.md  plan.md
chrome-extension/: README.md  content.js  package-lock.json  package.json  rules.json  tsconfig.json
chrome-extension/tests/: extension.spec.ts  fixtures.ts
cli/: lib.sh  wormhole  wormhole-add  wormhole-close  wormhole-close-others  wormhole-kv  wormhole-list  wormhole-next  wormhole-open  wormhole-previous  wormhole-remove
docs/: 260222-config-and-worktree-relocation.md
docs/plans/: 260221-messages-and-vscode-extension.md  conversation-search.md
gui/: Makefile  README.md
gui/Wormhole/: ContentView.swift  (+9 more)
gui/Wormhole.xcodeproj/: project.pbxproj
hammerspoon/: ring.lua  wormhole.lua
prompts/: bug-fix-task.md  issue-task.md  review-comments.md
shell/: lib.sh
src/: agent.rs  batch.rs  cli.rs  config.rs  conversations.rs  daemon.rs  dashboard.html  describe.rs  editor.rs  endpoints.rs  git.rs  github.rs  hammerspoon.rs  handlers.rs  jira.rs  kv.rs  main.rs  messages.rs  progress.rs  project.rs  project_path.rs  projects.rs  prompts.rs  pst.rs  serve_web.rs  status.rs  task.rs  terminal.rs  tmux.rs  tty.rs  util.rs  vscode.rs  wezterm.rs  wormhole.rs
tests/: harness.rs  test_batch.rs  test_harness.rs  test_integration.rs  test_server_json.rs
vscode-extension/: Makefile  package-lock.json  package.json
(+46 files in other folders)
