[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5.0.1"
hyper = { version = "0.14", features = ["full"] }
indexmap = "2.0.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.9.1"
tokio = { version = "1", features = ["full"] }
ureq = "2.9"
url = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
