[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dirs = "5.0.1"
hyper = { version = "0.14", features = ["full"] }
indexmap = "2.0.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.9.1"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2.9", features = ["json"] }
url = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
glob = "0.3"
rayon = "1.11.0"
rustyline = "15"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
libc = "0.2.182"

[dev-dependencies]
tempfile = "3"
